MRG-360 migrate competition lifecycle boundaries